--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
           <tr><th>Jour</th><th>Horaires</th></tr>
         </thead>
         <tbody>
-          <tr class="schedule-row"><td>Lundi</td><td>9h – 12h / 14h – 18h</td></tr>
-          <tr class="schedule-row"><td>Mardi</td><td>9h – 12h / 14h – 18h</td></tr>
-          <tr class="schedule-row"><td>Mercredi</td><td>9h – 12h / 14h – 18h</td></tr>
-          <tr class="schedule-row"><td>Jeudi</td><td>9h – 12h / 14h – 18h</td></tr>
-          <tr class="schedule-row"><td>Vendredi</td><td>9h – 12h / 14h – 18h</td></tr>
-          <tr class="schedule-row"><td>Samedi</td><td>9h – 12h</td></tr>
+          <tr class="schedule-row"><td>Lundi</td><td>8h – 20h</td></tr>
+          <tr class="schedule-row"><td>Mardi</td><td>8h – 20h</td></tr>
+          <tr class="schedule-row"><td>Mercredi</td><td>8h – 20h</td></tr>
+          <tr class="schedule-row"><td>Jeudi</td><td>8h – 20h</td></tr>
+          <tr class="schedule-row"><td>Vendredi</td><td>8h – 20h</td></tr>
+          <tr class="schedule-row"><td>Samedi</td><td>8h – 12h</td></tr>
           <tr class="schedule-row closed"><td>Dimanche</td><td>Fermé</td></tr>
         </tbody>
       </table>
